[metadata]
name = chord-hand
version = 0.0.1
description = A typing-optimized enconding for musical harmonies.
author = Felipe Defensor
readme = 'README.md'

[options]
packages = chord_hand
install_requires =
    PyQt6>=6.6.0

[flake8]
max-line-length = 88
extend-ignore = E203,E501
exclude = tilia/dev
