[metadata]
name = chord-hand
version = 0.1.3
description = A GUI and encoding for transcribing chord symbols efficiently.
author = Felipe Defensor
readme = 'README.md'

[options]
packages = chord_hand
install_requires =
    PyQt6-Qt6==6.6.3
    PyQt6_sip==13.8.0
    PyQt6==6.6.1
    platformdirs~=4.2.2
    tomli~=2.0.1